ajout du model Inventory et refactoring du layout/admin

--- a/app/views/layouts/partials/_sidebar.html.erb
+++ b/app/views/layouts/partials/_sidebar.html.erb
@@ -46,10 +46,10 @@
           <span data-localize="sidebar.nav.WIDGETS">Commandes</span>
         <% end %>
       </li>
-      <li class="<%= 'active' if controller.controller_name == 'inventory' %>">
-        <%= link_to admin_inventory_index_path do %>
+      <li class="<%= 'active' if controller.controller_name == 'inventories' %>">
+        <%= link_to admin_inventories_path do %>
           <em class="fa fa-cubes"></em>
-          <span data-localize="sidebar.nav.DOCUMENTATION">Inventaire</span>
+          <span data-localize="sidebar.nav.DOCUMENTATION">Inventaires</span>
         <% end %>
       </li>
       <li class="<%= 'active' if controller.controller_name == 'tutorials' %>">
