bloc categorie mobile

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,47 +15,98 @@
         <%= render 'svg'%>
       </div>
       <div class="visible-xs-24 visible-xs-block">
+        <ul>
         <div class="row">
-          <div class="col-xs-8 peintures-colles">
-            <div class="icon-peintures-colles"></div>
-            <p>Peintures & colles</p>
-          </div>
-          <div class="col-xs-8 enduits">
-            <div class="icon-enduits"></div>
-            <p>Enduits</p>
-          </div>
-          <div class="col-xs-8 economie-energie">
-            <div class="icon-economie-energie"></div>
-            <p>Economie d'énergie</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-8 bois">
-            <div class="icon-bois"></div>
-            <p>Bois</p>
-          </div>
-          <div class="col-xs-8 portes-fenetres">
-            <div class="icon-portes-fenetres"></div>
-            <p>Portes & fenêtres</p>
-          </div>
-          <div class="col-xs-8 production-energie-verte">
-            <div class="icon-production-energie-verte"></div>
-            <p>Production d'énergie verte</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-8 gros-oeuvre">
-            <div class="icon-gros-oeuvre"></div>
-            <p>Gros oeuvres</p>
-          </div>
-          <div class="col-xs-8 chauffage">
-            <div class="icon-chauffage"></div>
-            <p>Chauffage</p>
-          </div>
-          <div class="col-xs-8 isolation">
-            <div class="icon-isolation"></div>
-            <p>Isolation</p>
-          </div>
+          <li class="col-xs-8 peintures-colles">
+            <div class="img-category">
+              <div class="gradient-overlay">
+                <div class="table-cell">
+                  <div class="icon-peintures-colles">
+                  <h3>Peintures & colles</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-xs-8 enduits">
+            <div class="img-category">
+              <div class="gradient-overlay">
+                <div class="table-cell">
+                  <div class="icon-peintures-colles">
+                  <h3>Enduits</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-xs-8 economie-energie">
+            <div class="img-category">
+              <div class="gradient-overlay">
+                <div class="table-cell">
+                  <div class="icon-peintures-colles">
+                  <h3>Economie d'énergie</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-xs-8 bois">
+            <div class="img-category">
+              <div class="gradient-overlay">
+                <div class="table-cell">
+                  <div class="icon-peintures-colles">
+                  <h3>Bois</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-xs-8 bois">
+            <div class="img-category">
+              <div class="gradient-overlay">
+                <div class="table-cell">
+                  <div class="icon-peintures-colles">
+                  <h3>Portes & fenêtres</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-xs-8 production-energie-verte">
+            <div class="img-category">
+              <div class="gradient-overlay">
+                <div class="table-cell">
+                  <div class="icon-peintures-colles">
+                  <h3>Production d'énergie verte</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-xs-8 gros-oeuvre">
+            <div class="img-category">
+              <div class="gradient-overlay">
+                <div class="table-cell">
+                  <div class="icon-peintures-colles">
+                  <h3>Gros oeuvres</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-xs-8 chauffage">
+            <div class="img-category">
+              <div class="gradient-overlay">
+                <div class="table-cell">
+                  <div class="icon-peintures-colles">
+                  <h3>Chauffage</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-xs-8 isolation">
+            <div class="img-category">
+              <div class="gradient-overlay">
+                <div class="table-cell">
+                  <div class="icon-peintures-colles">
+                  <h3>Isolation</h3>
+                </div>
+              </div>
+            </div>
+          </li>
         </div>
       </div>
     </div>
