--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -112,6 +112,46 @@
   svg{
     margin-top:-150px;
   }
+
+  ul {
+    padding:0;
+    list-style: none;
+
+    li{
+      height:160px;
+      padding:5px;
+      &.peintures-colles .img-category{ background: image_url('slider.jpg');}
+
+      @media screen and (max-width: 500px){
+        width:100%;
+      }
+
+      .img-category{
+        width:100%;
+        height:100%;
+        background-size: cover !important;
+        display: inline-block;
+
+        .gradient-overlay{
+          width: 100%;
+          height: 100%;
+          background: rgba(0,0,0,0.3);
+          display: table;
+
+          .table-cell{
+            display: table-cell;
+            vertical-align: middle;
+            text-align: center;
+
+            h3{
+              color:#fff;
+              margin:0;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 .tutoriels-home {
