--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,94 +18,112 @@
         <ul>
         <div class="row">
           <li class="col-xs-8 peintures-colles">
-            <div class="img-category">
-              <div class="gradient-overlay">
-                <div class="table-cell">
-                  <div class="icon-peintures-colles">
-                  <h3>Peintures & colles</h3>
+            <a href="#">
+              <div class="img-category">
+                <div class="gradient-overlay">
+                  <div class="table-cell">
+                    <div class="icon-peintures-colles">
+                    <h3>Peintures & colles</h3>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </li>
           <li class="col-xs-8 enduits">
-            <div class="img-category">
-              <div class="gradient-overlay">
-                <div class="table-cell">
-                  <div class="icon-peintures-colles">
-                  <h3>Enduits</h3>
+            <a href="#">
+              <div class="img-category">
+                <div class="gradient-overlay">
+                  <div class="table-cell">
+                    <div class="icon-peintures-colles">
+                    <h3>Enduits</h3>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </li>
           <li class="col-xs-8 economie-energie">
-            <div class="img-category">
-              <div class="gradient-overlay">
-                <div class="table-cell">
-                  <div class="icon-peintures-colles">
-                  <h3>Economie d'énergie</h3>
+            <a href="#">
+              <div class="img-category">
+                <div class="gradient-overlay">
+                  <div class="table-cell">
+                    <div class="icon-peintures-colles">
+                    <h3>Economie d'énergie</h3>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </li>
           <li class="col-xs-8 bois">
-            <div class="img-category">
-              <div class="gradient-overlay">
-                <div class="table-cell">
-                  <div class="icon-peintures-colles">
-                  <h3>Bois</h3>
+            <a href="#">
+              <div class="img-category">
+                <div class="gradient-overlay">
+                  <div class="table-cell">
+                    <div class="icon-peintures-colles">
+                    <h3>Bois</h3>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </li>
           <li class="col-xs-8 bois">
-            <div class="img-category">
-              <div class="gradient-overlay">
-                <div class="table-cell">
-                  <div class="icon-peintures-colles">
-                  <h3>Portes & fenêtres</h3>
+            <a href="#">
+              <div class="img-category">
+                <div class="gradient-overlay">
+                  <div class="table-cell">
+                    <div class="icon-peintures-colles">
+                    <h3>Portes & fenêtres</h3>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </li>
           <li class="col-xs-8 production-energie-verte">
-            <div class="img-category">
-              <div class="gradient-overlay">
-                <div class="table-cell">
-                  <div class="icon-peintures-colles">
-                  <h3>Production d'énergie verte</h3>
+            <a href="#">
+              <div class="img-category">
+                <div class="gradient-overlay">
+                  <div class="table-cell">
+                    <div class="icon-peintures-colles">
+                    <h3>Production d'énergie verte</h3>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </li>
           <li class="col-xs-8 gros-oeuvre">
-            <div class="img-category">
-              <div class="gradient-overlay">
-                <div class="table-cell">
-                  <div class="icon-peintures-colles">
-                  <h3>Gros oeuvres</h3>
+            <a href="#">
+              <div class="img-category">
+                <div class="gradient-overlay">
+                  <div class="table-cell">
+                    <div class="icon-peintures-colles">
+                    <h3>Gros oeuvres</h3>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </li>
           <li class="col-xs-8 chauffage">
-            <div class="img-category">
-              <div class="gradient-overlay">
-                <div class="table-cell">
-                  <div class="icon-peintures-colles">
-                  <h3>Chauffage</h3>
+            <a href="#">
+              <div class="img-category">
+                <div class="gradient-overlay">
+                  <div class="table-cell">
+                    <div class="icon-peintures-colles">
+                    <h3>Chauffage</h3>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </li>
           <li class="col-xs-8 isolation">
-            <div class="img-category">
-              <div class="gradient-overlay">
-                <div class="table-cell">
-                  <div class="icon-peintures-colles">
-                  <h3>Isolation</h3>
+            <a href="#">
+              <div class="img-category">
+                <div class="gradient-overlay">
+                  <div class="table-cell">
+                    <div class="icon-peintures-colles">
+                    <h3>Isolation</h3>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </li>
         </div>
       </div>
