--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -36,10 +36,15 @@
 
       .search-field {
         height:60px;
-        width:700px;
+        width:90%;
+        max-width:700px;
         background: #FFF;
         border-radius: 5px 0 0 5px;
         border:0;
+
+        @media screen and (max-width: 600px){
+          width:80%;
+        }
       }
 
       .search-button {
@@ -108,6 +113,10 @@
 
 .categories-home {
   background: $grey-background;
+
+  @media screen and (max-width: 769px){
+    padding: 5px 10px;
+  }
 
   svg{
     margin-top:-150px;
