--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -240,21 +240,20 @@
 <section class="certification">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-xs-12 paiement">
-        <div class="image-paiement"></div>
-        <p>Paiement sécurisé assuré<br>par Paypal</p>
+      <div class="rassurance col-md-8 col-sm-24">
+        <%= image_tag("paypal.svg") %>
+        <h3>Paiement sécurisé assuré par Paypal</h3>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium</p>
       </div>
-      <div class="col-md-6 col-xs-12 livraison">
-        <div class="image-livraison"></div>
-        <p>Livraison à l’adresse<br>de votre choix</p>
+      <div class="rassurance col-md-8 col-sm-24">
+        <%= image_tag("truck.svg") %>
+        <h3>Livraison à l’adresse de votre choix</h3>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium</p>
       </div>
-      <div class="col-md-6 col-xs-12 retour">
-        <div class="image-retour"></div>
-        <p>Retour gratuit sous 15 jours</p>
-      </div>
-      <div class="col-md-6 col-xs-12 source">
-        <div class="image-source"></div>
-        <p>Matériaux de sources vérifiées</p>
+      <div class="rassurance col-md-8 col-sm-24">
+        <%= image_tag("return.svg") %>
+        <h3>Retour gratuit sous 15 jours</h3>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium</p>
       </div>
     </div>
   </div>
