--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -250,43 +250,18 @@
 }
 
 .certification {
-  background-image: image_url('certification/certification-back.jpg');
+  background-image:#fff;
   -webkit-background-size: cover;
   background-size: cover;
   text-align: center;
-  color: #fff;
-  padding: 30px 0;
+  padding: 50px 0;
 
-  .paiement p, .source p, .retour p, .livraison p {
-    font-size: 18px;
-    font-weight: bold;
+  .rassurance{
+    padding:30px 20px;
+    
   }
-  .image-paiement {
-    background-image: image_url('certification/paypal.png');
-    height: 107px;
-    width: 107px;
-    margin: auto;
-    margin-bottom: 30px;
+
+  h3{
+    margin-top:30px;
   }
-  .image-source {
-    background-image: image_url('certification/source.png');
-    height: 107px;
-    width: 107px;
-    margin: auto;
-    margin-bottom: 30px;
-  }
-  .image-retour {
-    background-image: image_url('certification/retour.png');
-    height: 107px;
-    width: 107px;
-    margin: auto;
-    margin-bottom: 30px;
-  }
-  .image-livraison {
-    background-image: image_url('certification/livraison.png');
-    height: 107px;
-    width: 107px;
-    margin: auto;
-    margin-bottom: 30px;
-  } 
 }
