--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -69,6 +69,12 @@ body{
   p, a, span{
     font-size:16px;
   }
+
+  ul{
+    list-style: none;
+    padding:0;
+     margin: 0;
+  }
 }
 
 /*********************
