--- a/app/assets/stylesheets/layout/footer.scss
+++ b/app/assets/stylesheets/layout/footer.scss
@@ -1,97 +1,114 @@
+
 #footer {
   background: $blue-gradient;
   color: #fff;
-  padding: 70px 0 50px 0;
+  padding: 70px 0 0 0;
+
+  @media screen and (max-width: 769px){
+      padding-top:30px
+      
+  }
 
   a, a:hover, a:focus {
     color: #fff;
   }
-}
 
-.footer-container {
-  .col-md-offset-2:nth-child(1) {
-    .row:nth-child(1) {
-      min-height: 300px;
+  ul{
+    li{
+      a{
+        line-height: 2;
+        font-size: 14px;
+      }
     }
   }
 
-  h5 {
-    font-weight: bold;
-    margin: 0 0 25px 0;
-  }
-}
+  .newsletter{
+    @media screen and (max-width: 769px){
+      text-align:center;
 
-.footer-social {
-  p {
-    font-weight: bold;
-    margin: 0 0 25px 0;
-  }
-
-  a {
-    width: 37px;
-    border: 3px solid #fff;
-      display: inline-block;
-      padding: 7px 0;
-      text-align: center;
-      border-radius: 25px;
-      margin-right: 10px;
-      i {
-        color: #fff;
+      input{
+        margin:auto;
       }
+    }
+
+    input{
+      width:100%;
+      max-width:300px;
+      color:#fff;
+      display: block;
+
+      &#newsletter-mail{
+        background:rgba(255,255,255,0.2);
+        border:0;
+        padding:20px;
+
+        &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+          color: #fff;
+        }
+
+        &::-moz-placeholder { /* Firefox 19+ */
+          color: #fff;
+        }
+
+        &:-ms-input-placeholder { /* IE 10+ */
+          color: #fff;
+        }
+
+        &:-moz-placeholder { /* Firefox 18- */
+          color: #fff;
+        }
+      }
+
+      &.btn{
+        background:#fff;
+        margin-top:10px;
+        color:$text-color;
+      }
+    }
   }
 
-  .footer-social-twitter {
-    background-color: $color-twitter;
-  }
-  .footer-social-twitter:hover, .footer-social-twitter:active {
-    border-color: $color-twitter;
-  }
+  .footer-low{
+    background:rgba(255,255,255,0.2);
+    width:100%;
+    margin-top:30px;
+    padding:20px 0;
 
-  .footer-social-facebook {
-    background-color: $color-facebook;
-  }
-  .footer-social-facebook:hover, .footer-social-facebook:active {
-    border-color: $color-facebook;
-  }
+    @media screen and (max-width: 769px){
+      text-align: center;
+    }
 
-  .footer-social-linkedin {
-    background-color: $color-linkedin;
-  }
-  .footer-social-linkedin:hover, .footer-social-linkedin:active {
-    border-color: $color-linkedin;
+    .container{
+      display: table;
+      height:100%;
+
+      .table-cell{
+
+        display: table-cell;
+        vertical-align: middle;
+
+        ul{
+
+        @media screen and (max-width: 769px){
+          display: block;
+          width:100%;
+          margin-top:20px;
+        }
+
+          li{
+            display: inline-block;
+            padding:0 10px;
+
+            a{
+              i{
+                font-size:20px;
+                color:#fff;
+                vertical-align: middle;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
 
-.footer-credits {
-  display: block;
-  width: 100%;
-  min-height: 70px;
-  background: $footer-2;
-  text-align: center;
-  overflow: hidden;
-  color: #fff;
-}
-
-.footer-logo {
-  text-align: left;
-  padding-top: 10px;
-
-  img {
-    height: 50px;
-  }
-}
-
-.footer-other-link {
-  padding-top: 25px;
-}
-
-.footer-copyright {
-  text-align: right;
-  padding-top: 25px;
-}
-
-@media (max-width: 767px) {
-  .footer-social, .footer-copyright, .footer-logo {
-    text-align: center;
-  }
-}
