--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,8 +48,15 @@
         BODY
 **********************/
 body{
+  padding-top:100px;
+  font-size:16px;
+  font-weight: normal;
 
-  color: #1c1833;
+  @media screen and (max-width: 769px){
+    padding-top:50px;
+  }
+
+  color:#1c1833;
 
   h1{
     font-size:60px;
