--- a/app/assets/stylesheets/pages/login.scss
+++ b/app/assets/stylesheets/pages/login.scss
@@ -1,5 +1,6 @@
 .login{
 	background: $green-gradient;
+	margin-top:-100px;
 	height: 100vh;
 	width: 100%;
 	display: table;
@@ -10,29 +11,57 @@
 
 		.form-content{
 			width:430px;
-			height:420px;
 			border-radius: 10px;
 			background: #fff;
 			box-shadow: $shadow;
 			margin: auto;
-			padding:20px;
-			text-align: center;	
+			padding-top:20px;
 
 			h2{
-				margin: 0;
+				margin: 15px;
+				text-align: center;
 			}
 
-			input{
-				width:100%;
-				padding:15px 20px;
-			}
+			form{
 
-			.actions{
+				padding:0 20px;
+
 				input{
-					background: $green-gradient;
-					border-radius: 5px;
-					border: none;
+					width:100%;
+					padding:15px 20px;
+					margin:10px 0;
+
+					&#user_remember_me{
+						width:auto;
+						font-size: 14px;
+						vertical-align: middle;
+					}
 				}
+
+				label{
+					margin:3px 0 0 10px;
+				}
+
+				.actions{
+					margin-top:30px;
+
+					input{
+						background: $green-gradient;
+						border-radius: 5px;
+						border: none;
+						color:#fff;
+					}
+				}
+			}
+
+			.register-link{
+				margin-top:20px;
+				padding:30px 0;
+				text-align: center;
+				border-radius: 0  0 10px 10px ;
+				width: 100%;
+				background:$grey-background;
+				border-top:1px solid rgba(0,0,0,0.05)
 			}
 		}
 	}
